changed vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": { "distDir": "dist" }
-    },
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
+  "routes": [
+    { "src": "/products.json", "dest": "/dist/products.json" },
+    { "src": "/images/(.*)", "dest": "/dist/images/$1" },
+    { "src": "/(.*)", "dest": "/dist/index.html" }
   ]
 }
